push common functionality into AbstractPatternBuilder and AbstractNodeInserterTransform